# seeding-QDArchive

./: .gitignore  QDA File Extensions Formats - Overview.csv  Qualitative Data Repositories - Sheet1.csv  README.md  algorithm.md  database.md  datasources.csv  datasources.md  implementation-plan.md  manual.md  open-questions.md  pyproject.toml  queries.txt  report-draft-part-1.md
man/: pipeline.1
src/pipeline/: __init__.py  cli.py  config.py
src/pipeline/connectors/: __init__.py  base.py  dataverse.py  dryad.py  qualidatanet.py  ukds.py  zenodo.py
src/pipeline/db/: connection.py  export.py  models.py
src/pipeline/storage/: file_manager.py
src/pipeline/utils/: license.py  logging.py
tests/: test_basics.py  test_cli.py  test_dataverse.py  test_dryad.py  test_qualidatanet.py  test_ukds.py  test_utils.py  test_zenodo.py
